# GestureScope

./: README.md  pyproject.toml  requirements.txt  run_realtime.py  run_video_file.py
docs/: classroom_demo_plan.md
sample_outputs/: README.md
src/gesturescope/: detector.py  gesture_rules.py  realtime_app.py  session.py  tracker.py  utils.py  video_file_app.py
tests/: test_gesture_rules.py
